// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/npm/extract/locked-versions .getLockedVersions() appends <7 to npm constraints 1`] = `
Array [
  Object {
    "constraints": Object {
      "npm": ">=6.0.0 <7",
    },
    "deps": Array [
      Object {
        "currentValue": "1.0.0",
        "depName": "a",
        "lockedVersion": "1.0.0",
      },
      Object {
        "currentValue": "2.0.0",
        "depName": "b",
        "lockedVersion": "2.0.0",
      },
    ],
    "lockFiles": Array [
      "package-lock.json",
    ],
    "npmLock": "package-lock.json",
  },
]
`;

exports[`manager/npm/extract/locked-versions .getLockedVersions() ignores pnpm 1`] = `
Array [
  Object {
    "deps": Array [
      Object {
        "currentValue": "1.0.0",
        "depName": "a",
      },
      Object {
        "currentValue": "2.0.0",
        "depName": "b",
      },
    ],
    "lockFiles": Array [
      "pnpm-lock.yaml",
    ],
    "pnpmShrinkwrap": "pnpm-lock.yaml",
  },
]
`;

exports[`manager/npm/extract/locked-versions .getLockedVersions() uses package-lock.json with npm v6.0.0 1`] = `
Array [
  Object {
    "constraints": Object {
      "npm": "<7",
    },
    "deps": Array [
      Object {
        "currentValue": "1.0.0",
        "depName": "a",
        "lockedVersion": "1.0.0",
      },
      Object {
        "currentValue": "2.0.0",
        "depName": "b",
        "lockedVersion": "2.0.0",
      },
    ],
    "lockFiles": Array [
      "package-lock.json",
    ],
    "npmLock": "package-lock.json",
  },
]
`;

exports[`manager/npm/extract/locked-versions .getLockedVersions() uses package-lock.json with npm v7.0.0 1`] = `
Array [
  Object {
    "constraints": Object {},
    "deps": Array [
      Object {
        "currentValue": "1.0.0",
        "depName": "a",
        "lockedVersion": "1.0.0",
      },
      Object {
        "currentValue": "2.0.0",
        "depName": "b",
        "lockedVersion": "2.0.0",
      },
    ],
    "lockFiles": Array [
      "package-lock.json",
    ],
    "npmLock": "package-lock.json",
  },
]
`;

exports[`manager/npm/extract/locked-versions .getLockedVersions() uses yarn.lock with yarn v1.22.0 1`] = `
Array [
  Object {
    "constraints": Object {},
    "deps": Array [
      Object {
        "currentValue": "1.0.0",
        "depName": "a",
        "lockedVersion": "1.0.0",
      },
      Object {
        "currentValue": "2.0.0",
        "depName": "b",
        "lockedVersion": "2.0.0",
      },
      Object {
        "currentValue": "^1.22.0",
        "depName": "yarn",
        "depType": "engines",
        "lockedVersion": undefined,
      },
    ],
    "lockFiles": Array [
      "yarn.lock",
    ],
    "npmLock": "package-lock.json",
    "yarnLock": "yarn.lock",
  },
]
`;

exports[`manager/npm/extract/locked-versions .getLockedVersions() uses yarn.lock with yarn v2.1.0 1`] = `
Array [
  Object {
    "constraints": Object {
      "yarn": "^2.0.0",
    },
    "deps": Array [
      Object {
        "currentValue": "1.0.0",
        "depName": "a",
        "lockedVersion": "1.0.0",
      },
      Object {
        "currentValue": "2.0.0",
        "depName": "b",
        "lockedVersion": "2.0.0",
      },
      Object {
        "currentValue": "^2.1.0",
        "depName": "yarn",
        "depType": "engines",
        "lockedVersion": undefined,
        "lookupName": "@yarnpkg/cli",
      },
    ],
    "lockFiles": Array [
      "yarn.lock",
    ],
    "npmLock": "package-lock.json",
    "yarnLock": "yarn.lock",
  },
]
`;

exports[`manager/npm/extract/locked-versions .getLockedVersions() uses yarn.lock with yarn v2.2.0 1`] = `
Array [
  Object {
    "constraints": Object {
      "yarn": "^2.2.0",
    },
    "deps": Array [
      Object {
        "currentValue": "1.0.0",
        "depName": "a",
        "lockedVersion": "1.0.0",
      },
      Object {
        "currentValue": "2.0.0",
        "depName": "b",
        "lockedVersion": "2.0.0",
      },
      Object {
        "currentValue": "^2.2.0",
        "depName": "yarn",
        "depType": "engines",
        "lockedVersion": undefined,
        "lookupName": "@yarnpkg/cli",
      },
    ],
    "lockFiles": Array [
      "yarn.lock",
    ],
    "npmLock": "package-lock.json",
    "yarnLock": "yarn.lock",
  },
]
`;
